syntax = "proto3";

package dylk;

// -------------------------------------------------------------------------
// The Carriers service definition.
service Carriers {
  rpc AlterCarrier   (Carrier)       returns (CarrierGeneralResponse)  {}
  rpc ListCarriers   (CarrierParams) returns (CarrierListResponse)     {}
  rpc GetCarrier     (CarrierId)     returns (CarrierResponse)         {}
  rpc DeleteCarrier  (CarrierId)     returns (CarrierGeneralResponse)  {}
}

message Carrier {
  int32 id          = 1;
  string code       = 2;
  string title      = 3;
  bool disabled     = 4;
}

message CarrierId {
  int32 id = 1;
}

message CarrierParam {
  string name  = 1;
  string value = 2;
}

message CarrierParams {
  repeated CarrierParam paramList     = 1;
  repeated CarrierParam pageParamList = 2;
}

message CarrierResponse {
  int32 returnCode       = 1;
  string returnMessage   = 2;
  Carrier carrier        = 3;
}

message CarrierListResponse {
  int32 returnCode              = 1;
  string returnMessage          = 2;
  repeated Carrier carrierList  = 3;
  int32 totalItems              = 4;
  int32 totalPages              = 5;
}

message CarrierGeneralResponse {
  int32 returnCode     = 1;
  string returnMessage = 2;
}
